tests/valid/control_flow/if_simple.fig
// Simple if statement with pass body
func check_positive(x: i32) -> ok
    if x > 0
        pass
