tests/invalid/syntax/func_body_no_indent.fig
// INVALID: func definition body must start with indent
// Expected parse error: indented block required
func bad_func() -> ok
pass
